--- a/monitoring/src/main/webapp/WEB-INF/web.xml
+++ b/monitoring/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
  
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
+        <param-value>/applicationContext.xml</param-value>
     </context-param>
  
     <listener>
